# service_development

./: .gitignore  manage.py  pyproject.toml
blog/: forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_image_preview.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: my_tags.py
client/: models.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/management/commands/: runapscheduler.py
main/migrations/: 0001_initial.py  0002_newsletter_user.py  0003_alter_newsletter_user.py  0004_alter_newsletter_periodicity_mailing.py  0005_remove_newsletter_status_mailing_and_more.py
main/templates/main/: base.html  client_form.html  form_redirect.html  index.html  message_form.html  my_newsletter_list.html  newsletter.html  newsletter_delete.html  newsletter_form.html
main/templates/main/includes/: inc_menu.html
service_development/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_user_image_preview.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html  verification_failed.html
