[tool.poetry]
name = "service-development"
version = "0.1.0"
description = ""
authors = ["Anaxuname <anaxuname@gmail.com>"]
readme = "README.md"
packages = [{include = "service_development"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.7"
psycopg2-binary = ""
redis = ""



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
